close investigation of parents. still on going.

--- a/StraightOffsetPolygons/StraightOffsetPolygons.vcxproj.filters
+++ b/StraightOffsetPolygons/StraightOffsetPolygons.vcxproj.filters
@@ -40,6 +40,12 @@
     <ClCompile Include="StraightOffsetPolygonWorking.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\PolygonDAG.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Polygon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\mexFileIO.h">
@@ -82,6 +88,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\Polygon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\PolygonDAG.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
