--- a/EMClustering/EMGClustering.vcxproj
+++ b/EMClustering/EMGClustering.vcxproj
@@ -179,18 +179,25 @@
   <ItemGroup>
     <ClCompile Include="..\src\Covariance.cpp" />
     <ClCompile Include="..\src\EMGaussian.cpp" />
+    <ClCompile Include="..\src\FloydWarshall.cpp" />
     <ClCompile Include="..\src\Kmeans.cpp" />
     <ClCompile Include="..\src\szMexUtility.cpp" />
     <ClCompile Include="..\src\szMiscOperations.cpp" />
     <ClCompile Include="..\src\szMyNeighborOp.cpp" />
-    <ClCompile Include="EMGaussianTest.cpp" />
+    <ClCompile Include="..\src\TriangulateBourke.cpp" />
+    <ClCompile Include="..\src\Triangulation.cpp" />
+    <ClCompile Include="GraphThinningTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Covariance.h" />
+    <ClInclude Include="..\include\Dijkstra.h" />
     <ClInclude Include="..\include\DisjointSet.h" />
     <ClInclude Include="..\include\EMGaussian.h" />
     <ClInclude Include="..\include\Feature.h" />
+    <ClInclude Include="..\include\FloydWarshall.h" />
     <ClInclude Include="..\include\GaussianDistribution.h" />
+    <ClInclude Include="..\include\Graph.h" />
+    <ClInclude Include="..\include\GraphFactory.h" />
     <ClInclude Include="..\include\Kmeans.h" />
     <ClInclude Include="..\include\mexFileIO.h" />
     <ClInclude Include="..\include\szMexUtility.h" />
