--- a/StraightOffsetPolygons3D/StraightOffsetPolygon3D.vcxproj.filters
+++ b/StraightOffsetPolygons3D/StraightOffsetPolygon3D.vcxproj.filters
@@ -40,6 +40,12 @@
     <ClCompile Include="StraightOffsetPolygon3DV2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Polygon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\PolygonDAG.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\mexFileIO.h">
