--- a/StraightOffsetPolygonsSkeleton/StraightOffsetPolygonsSkeleton.vcxproj
+++ b/StraightOffsetPolygonsSkeleton/StraightOffsetPolygonsSkeleton.vcxproj
@@ -184,6 +184,8 @@
     <ClCompile Include="..\src\MiscGeometry.cpp" />
     <ClCompile Include="..\src\MovingParticle.cpp" />
     <ClCompile Include="..\src\ParticleSimulator.cpp" />
+    <ClCompile Include="..\src\Polygon.cpp" />
+    <ClCompile Include="..\src\PolygonDAG.cpp" />
     <ClCompile Include="..\src\Snapshot.cpp" />
     <ClCompile Include="..\src\szConvexHull2D.cpp" />
     <ClCompile Include="..\src\szMexUtility.cpp" />
@@ -199,6 +201,7 @@
     <ClInclude Include="..\include\MovingParticle.h" />
     <ClInclude Include="..\include\ParticleDirection.h" />
     <ClInclude Include="..\include\ParticleSimulator.h" />
+    <ClInclude Include="..\include\PolygonDAG.h" />
     <ClInclude Include="..\include\Snapshot.h" />
     <ClInclude Include="..\include\szConvexHull2D.h" />
     <ClInclude Include="..\include\szMexUtility.h" />
