--- a/StraightOffsetPolygonsUC/StraightOffsetPolygonsUC.vcxproj
+++ b/StraightOffsetPolygonsUC/StraightOffsetPolygonsUC.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{A6A688FA-9607-4D6F-936A-A192FFFC8636}</ProjectGuid>
-    <RootNamespace>StraightOffsetPolygon3D</RootNamespace>
+    <ProjectGuid>{3611F110-1BF7-45B4-A8C8-8DF3CA469B04}</ProjectGuid>
+    <RootNamespace>StraightOffsetPolygonUC</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <ProjectName>StraightOffsetPolygon3D</ProjectName>
+    <ProjectName>StraightOffsetPolygonUC</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -191,7 +191,8 @@
     <ClCompile Include="..\src\szMexUtility.cpp" />
     <ClCompile Include="..\src\szMiscOperations.cpp" />
     <ClCompile Include="..\src\szMyNeighborOp.cpp" />
-    <ClCompile Include="StraightOffsetPolygon3DV2.cpp" />
+    <ClCompile Include="ParticleSimulatorUC.cpp" />
+    <ClCompile Include="StraightOffsetPolygonUC.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\mexFileIO.h" />
@@ -200,13 +201,17 @@
     <ClInclude Include="..\include\MovingParticle.h" />
     <ClInclude Include="..\include\ParticleDirection.h" />
     <ClInclude Include="..\include\ParticleSimulator.h" />
+    <ClInclude Include="..\include\Polygon.h" />
+    <ClInclude Include="..\include\PolygonDAG.h" />
     <ClInclude Include="..\include\Snapshot.h" />
+    <ClInclude Include="..\include\StationaryParticle.h" />
     <ClInclude Include="..\include\szConvexHull2D.h" />
     <ClInclude Include="..\include\szMexUtility.h" />
     <ClInclude Include="..\include\szmexutilitytemplate.h" />
     <ClInclude Include="..\include\szMiscOperations.h" />
     <ClInclude Include="..\include\szMyNeighborOp.h" />
     <ClInclude Include="..\include\szParticleF.h" />
+    <ClInclude Include="ParticleSimulatorUC.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
