made StraightPolygonGreedy to its own project.

--- a/StraightOffsetPolygonsGreedy/StraightOffsetPolygonsGreedy.vcxproj
+++ b/StraightOffsetPolygonsGreedy/StraightOffsetPolygonsGreedy.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{8099F411-2D33-4A00-931C-8138BA430EAF}</ProjectGuid>
-    <RootNamespace>StraightOffsetPolygons</RootNamespace>
+    <ProjectGuid>{F5C3CAB0-09CA-4738-BDD0-6B18E4BFAFC5}</ProjectGuid>
+    <RootNamespace>StraightOffsetPolygonsGreedy</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <ProjectName>StraightOffsetPolygons</ProjectName>
+    <ProjectName>StraightOffsetPolygonsGreedy</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -184,6 +184,7 @@
     <ClCompile Include="..\src\MiscGeometry.cpp" />
     <ClCompile Include="..\src\MovingParticle.cpp" />
     <ClCompile Include="..\src\ParticleSimulator.cpp" />
+    <ClCompile Include="..\src\ParticleSimulatorGreedy.cpp" />
     <ClCompile Include="..\src\Polygon.cpp" />
     <ClCompile Include="..\src\PolygonDAG.cpp" />
     <ClCompile Include="..\src\Snapshot.cpp" />
@@ -191,7 +192,7 @@
     <ClCompile Include="..\src\szMexUtility.cpp" />
     <ClCompile Include="..\src\szMiscOperations.cpp" />
     <ClCompile Include="..\src\szMyNeighborOp.cpp" />
-    <ClCompile Include="StraightOffsetPolygonWorking.cpp" />
+    <ClCompile Include="StraightOffsetPolygonGreedy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\mexFileIO.h" />
@@ -200,6 +201,7 @@
     <ClInclude Include="..\include\MovingParticle.h" />
     <ClInclude Include="..\include\ParticleDirection.h" />
     <ClInclude Include="..\include\ParticleSimulator.h" />
+    <ClInclude Include="..\include\ParticleSimulatorGreedy.h" />
     <ClInclude Include="..\include\Polygon.h" />
     <ClInclude Include="..\include\PolygonDAG.h" />
     <ClInclude Include="..\include\Snapshot.h" />
