calculate appropriate distance threshold to collect supporters.

--- a/CommonFateGrouping/CommonFateGrouping.vcxproj.filters
+++ b/CommonFateGrouping/CommonFateGrouping.vcxproj.filters
@@ -22,6 +22,15 @@
     <ClCompile Include="..\src\MiscGeometry.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\TriangulateBourke.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Triangulation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\TriangulationHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\mexFileIO.h">
@@ -49,6 +58,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\IntersectionConvexPolygons.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\TriangulateBourke.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Triangulation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\TriangulationHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
