--- a/CommonFateGrouping/CommonFateGrouping.vcxproj
+++ b/CommonFateGrouping/CommonFateGrouping.vcxproj
@@ -183,6 +183,9 @@
     <ClCompile Include="..\src\szMexUtility.cpp" />
     <ClCompile Include="..\src\szMiscOperations.cpp" />
     <ClCompile Include="..\src\szMyNeighborOp.cpp" />
+    <ClCompile Include="..\src\TriangulateBourke.cpp" />
+    <ClCompile Include="..\src\Triangulation.cpp" />
+    <ClCompile Include="..\src\TriangulationHelper.cpp" />
     <ClCompile Include="CommonFateGrouping.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -194,6 +197,9 @@
     <ClInclude Include="..\include\szMiscOperations.h" />
     <ClInclude Include="..\include\szMyNeighborOp.h" />
     <ClInclude Include="..\include\szParticleF.h" />
+    <ClInclude Include="..\include\TriangulateBourke.h" />
+    <ClInclude Include="..\include\Triangulation.h" />
+    <ClInclude Include="..\include\TriangulationHelper.h" />
     <ClInclude Include="LinkedTriple.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
