Before adding left/right supports.

--- a/CommonFateGrouping/CommonFateGrouping.vcxproj.filters
+++ b/CommonFateGrouping/CommonFateGrouping.vcxproj.filters
@@ -31,6 +31,18 @@
     <ClCompile Include="..\src\TriangulationHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LinkedTriple.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\CircleFitting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\LevenbergMarquardt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\GaussJordan.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\mexFileIO.h">
