--- a/CommonFateGrouping/CommonFateGrouping.vcxproj
+++ b/CommonFateGrouping/CommonFateGrouping.vcxproj
@@ -177,7 +177,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\CircleFitting.cpp" />
+    <ClCompile Include="..\src\GaussJordan.cpp" />
     <ClCompile Include="..\src\IntersectionConvexPolygons.cpp" />
+    <ClCompile Include="..\src\LevenbergMarquardt.cpp" />
     <ClCompile Include="..\src\MiscGeometry.cpp" />
     <ClCompile Include="..\src\szConvexHull2D.cpp" />
     <ClCompile Include="..\src\szMexUtility.cpp" />
@@ -187,6 +190,7 @@
     <ClCompile Include="..\src\Triangulation.cpp" />
     <ClCompile Include="..\src\TriangulationHelper.cpp" />
     <ClCompile Include="CommonFateGrouping.cpp" />
+    <ClCompile Include="LinkedTriple.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\IntersectionConvexPolygons.h" />
