--- a/Testbed/Testbed.vcxproj
+++ b/Testbed/Testbed.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{0A24131A-9E73-4955-A90F-BBC9F7FCB697}</ProjectGuid>
-    <RootNamespace>CommonFateGrouping</RootNamespace>
+    <ProjectGuid>{C35A470D-41B9-4675-BD20-6CA37F420401}</ProjectGuid>
+    <RootNamespace>Testbed</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <ProjectName>CommonFateGrouping</ProjectName>
+    <ProjectName>Testbed</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -81,7 +81,7 @@
     <ClCompile>
       <AdditionalOptions>/export:"mexFunction" %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);..\include;.;C:\Program Files (x86)\MATLAB\R2011b\extern\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);..\include;.;..\CommonFateGrouping; C:\Program Files (x86)\MATLAB\R2011b\extern\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;ContextualSaliency_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -177,10 +177,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\CircleFitting.cpp" />
-    <ClCompile Include="..\src\GaussJordan.cpp" />
     <ClCompile Include="..\src\IntersectionConvexPolygons.cpp" />
-    <ClCompile Include="..\src\LevenbergMarquardt.cpp" />
     <ClCompile Include="..\src\MiscGeometry.cpp" />
     <ClCompile Include="..\src\szConvexHull2D.cpp" />
     <ClCompile Include="..\src\szMexUtility.cpp" />
@@ -189,8 +186,7 @@
     <ClCompile Include="..\src\TriangulateBourke.cpp" />
     <ClCompile Include="..\src\Triangulation.cpp" />
     <ClCompile Include="..\src\TriangulationHelper.cpp" />
-    <ClCompile Include="CommonFateGroupingV3.cpp" />
-    <ClCompile Include="LinkedTriple.cpp" />
+    <ClCompile Include="TestbedV9B.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\IntersectionConvexPolygons.h" />
@@ -204,7 +200,6 @@
     <ClInclude Include="..\include\TriangulateBourke.h" />
     <ClInclude Include="..\include\Triangulation.h" />
     <ClInclude Include="..\include\TriangulationHelper.h" />
-    <ClInclude Include="LinkedTriple.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
