--- a/Testbed/Testbed.vcxproj.filters
+++ b/Testbed/Testbed.vcxproj.filters
@@ -28,7 +28,9 @@
     <ClCompile Include="..\src\TriangulationHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TestbedFindCores.cpp" />
+    <ClCompile Include="TestbedDijkstra.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\mexFileIO.h">
