--- a/Testbed/Testbed.vcxproj.filters
+++ b/Testbed/Testbed.vcxproj.filters
@@ -28,7 +28,10 @@
     <ClCompile Include="..\src\TriangulationHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TestbedDijkstra.cpp">
+    <ClCompile Include="TestbedHungarian.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Hungarian.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -64,6 +67,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\include\TriangulationHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Hungarian.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
